[package]
authors = ["Adam Friedland <adam.friedland@sage.com>"]
edition = "2018"
name = "meshuganah"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.5"
async-trait = "0.1.41"
futures = "0.3.0"
mongodb = {version = "1.1.1", default-features = false, features = ["async-std-runtime"]}
serde = {version = "1.0", features = ["derive"]}
