[package]
authors = ["Adam Friedland <adam.friedland@sage.com>"]
categories = ["database"]
description = "A type safe ODM for MongoDB."
edition = "2018"
homepage = "https://github.com/adamfriedland/meshuganah"
keywords = ["mongodb", "odm"]
license = "MIT"
name = "meshuganah"
readme = "../README.md"
repository = "https://github.com/adamfriedland/meshuganah"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.5"
async-trait = "0.1.41"
futures = "0.3.0"
mongodb = {version = "1.1.1", default-features = false, features = ["async-std-runtime"]}
serde = {version = "1.0", features = ["derive"]}
